[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/PotionPick/Potion Pick.png" type="Texture" id=1]
[ext_resource path="res://UI/PotionPick/ChoiceButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/PotionPick/potion_pick.gd" type="Script" id=3]
[ext_resource path="res://Resource/Minecraft.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 9
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "Close"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 180 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Open"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 180 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 180 ) ]
}

[node name="PotionPick" type="Node2D"]
position = Vector2( 0, 180 )
z_index = 1
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 103.0
margin_top = 51.0
margin_right = 143.0
margin_bottom = 102.0
custom_constants/separation = 2
alignment = 1

[node name="Health" parent="TextureRect/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 40.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_fonts/font = SubResource( 1 )
clip_text = true

[node name="Poison" parent="TextureRect/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_fonts/font = SubResource( 1 )
clip_text = true
align = 2
icon_align = 1

[node name="Bomb" parent="TextureRect/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 52.0
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_fonts/font = SubResource( 1 )
clip_text = true

[node name="Button" type="Button" parent="."]
margin_left = 140.0
margin_top = 133.0
margin_right = 180.0
margin_bottom = 153.0
focus_mode = 0
text = "       "
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 2 )
anims/Open = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="pressed" from="TextureRect/VBoxContainer/Health" to="." method="_on_Health_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Poison" to="." method="_on_Poison_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Bomb" to="." method="_on_Bomb_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
